#618: Update to java 17 to be compatible with screen recorder